Notes/KubernetesAuthoritativeGuideBookNotes/CH04 Service/SE06 Ingress 7 Layer Route Framework/2 Create Ingress Policy/ingress-ingressclassname.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: external-lb
  rules:
  - host: "*.example.com"
    http:
      paths:
      - path: /example
        pathType: Prefix
        backend:
          service:
            name: example-service
            port: 
              number: 80
