Notes/KubernetesAuthoritativeGuideBookNotes/CH04 Service/SE06 Ingress 7 Layer Route Framework/2 Create Ingress Policy/mywebsite-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mywebsite-ingress
spec:
  rules:
  - host: mywebsite.com
    http:
      paths:
      - path: /demo
        pathType: ImplementationSpecific
        backend:
          service:
            name: webapp
            port:
              number: 8080
